--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "history": "^4.7.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4",
     "medium-editor": "^5.23.3",
     "medium-editor-insert-plugin": "^2.5.0",
     "mongoose": "^5.0.14",
+    "prettier": "^1.12.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
@@ -30,11 +33,19 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
+  "lint-staged": {
+      "*/**/*.{js,json,css}": [
+        "prettier --config .prettierrc --write",
+        "git add"
+      ]
+    },
   "scripts": {
+    "precommit": "lint-staged",
     "dev": "nodemon -w server/app.js -d \"npm start\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettify":"./node_modules/.bin/prettier --config .prettierrc --write '*/**/*.{js,jsx,css}'"
   }
 }
