Add eslint conig

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "history": "^4.7.2",
@@ -31,14 +33,20 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "lint-staged": {
-      "*/**/*.{js,json,css}": [
-        "prettier --config .prettierrc --write",
-        "git add"
-      ]
-    },
+    "*/**/*.{js, jsx, json}": [
+      "eslint --fix",
+      "prettier --config .prettierrc --write"
+    ],
+    "src/**/*.{scss,css}": [
+        "stylelint --config=.stylelintrc --fix",
+        "prettier --config .prettierrc --write"
+  ]
+  },
   "scripts": {
     "precommit": "lint-staged",
     "dev": "nodemon -w server/app.js -d \"npm start\"",
@@ -46,6 +54,21 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettify":"./node_modules/.bin/prettier --config .prettierrc --write '*/**/*.{js,jsx,css}'"
+    "test:lint:js": "eslint --ext=js --ext=jsx .",
+    "test:lint:scss": "stylelint --config=.stylelintrc '**/*.css'",
+    "test:lint": "run-s test:lint:**",
+    "test:unit": "react-scripts test --env=jsdom",
+    "test": "run-s test:**",
+    "lint": "node_modules/.bin/eslint --ext=js --ext=jsx --fix .",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "prettify": "./node_modules/.bin/prettier --config .prettierrc --write '*/**/*.{js,jsx,css}'"
+  },
+  "devDependencies": {
+    "eslint": "^4.9.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
