--- a/package.json
+++ b/package.json
@@ -3,39 +3,74 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
     "body-parser": "^1.18.2",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
     "cloudinary": "^1.11.0",
     "compression": "^1.7.2",
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
     "helmet": "^3.12.0",
     "history": "^4.7.2",
+    "html-webpack-plugin": "2.29.0",
     "husky": "^0.14.3",
+    "jest": "20.0.4",
     "lint-staged": "^7.0.4",
     "medium-editor": "^5.23.3",
     "medium-editor-insert-plugin": "^2.5.0",
     "mongoose": "^5.0.14",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
     "prettier": "^1.12.0",
+    "promise": "8.0.1",
     "prop-types": "^15.6.1",
+    "raf": "3.4.0",
     "react": "^16.3.1",
+    "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "^1.1.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "resolve": "1.6.0",
+    "style-loader": "0.19.0",
     "stylelint": "^9.2.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-standard": "^18.2.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "lint-staged": {
     "*/**/*.{js, jsx, json}": [
@@ -43,22 +78,20 @@
       "prettier --config .prettierrc --write"
     ],
     "src/**/*.{scss,css}": [
-        "stylelint --config=.stylelintrc --fix",
-        "prettier --config .prettierrc --write"
-  ]
+      "stylelint --config=.stylelintrc --fix",
+      "prettier --config .prettierrc --write"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
     "dev": "nodemon -w server/app.js -d \"npm start\"",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "run-s test:**",
     "test:lint:js": "eslint --ext=js --ext=jsx .",
     "test:lint:scss": "stylelint --config=.stylelintrc '**/*.css'",
     "test:lint": "run-s test:lint:**",
-    "test:unit": "react-scripts test --env=jsdom",
-    "test": "run-s test:**",
+    "test:unit": "node scripts/test.js --env=jsdom",
     "lint": "node_modules/.bin/eslint --ext=js --ext=jsx --fix .",
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "prettify": "./node_modules/.bin/prettier --config .prettierrc --write '*/**/*.{js,jsx,css}'"
@@ -70,5 +103,47 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.4.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
