Add booking option

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "precommit": "lint-staged",
     "dev": "nodemon -w server/app.js -d \"npm start\"",
     "start": "nodemon scripts/start.js",
+    "start:server": "nodemon server/app.js",
     "build": "node scripts/build.js",
     "test": "run-s test:**",
     "test:lint:js": "eslint --ext=js --ext=jsx .",
